<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundManager</string>
    <string name="light">Light</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="light_lv">Light Level: </string>
    <string name="action_settings">Settings</string>
    <string name="media_volume">Media Volume : </string>
    <string name="ring_volume">Ring Volume : </string>
    <string name="notification_volume">Notification Volume : </string>
    <string name="call_volume">Call Volume : </string>
    <string name="alarm_volume">Alarm Volume : </string>
    <string name="systme_volume">System Volume : </string>
    <string name="sound_vibrate">Sound / Vibrate</string>
    <string name="vibrate_ringer_on_off">Vibrate Ringer On/Off</string>
    <string name="vibrate_ringer_lv">Vibrate Ringer Level</string>
    <string name="vibrate_notification_on_off">Vibrate Notification On/Off</string>
    <string name="vibrate_notification_lv">Vibrate Notification Level</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="Brightness_on_off">Brightness On/Off</string>
    <string name="brightness_auto">Brightness Auto</string>
    <string name="silent">Silent</string>
    <string name="silent_mode">Silent Mode</string>

</resources>